# poseidon_core_backup

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.jupyter  GPU-Support.md  GTPC.md  LDBC.md  README.md  Tutorial.md
bench/: CMakeLists.txt  buffered_vec_bench.cpp  chunked_vec_bench.cpp  dict_bench.cpp  graph_bench.cpp  ldbc_bench.cpp  nvm_chunked_vec_bench.cpp  property_bench.cpp  start_bench.cpp
cmake/: Testing.cmake.in
data/: README.md  customers.csv  order-details.csv  ordered.csv  orders.csv  products.csv
gunrock/: bfs_app_cu.txt  gunrock-h_changes.txt  gunrock_h.txt  pr_app_cu.txt  sssp_app-cu_changes.txt  sssp_app_cu.txt
jupyter/poseidon/: kernel.json  poseidonkernel.py
queries/gtpc/: import-gtpc.q  olap4.q
queries/ldbc/: is1.q
src/: analytics.hpp  defs.hpp  exceptions.hpp  ldbc.cpp  ldbc.hpp
src/analytics/: SSSP_gunrock.cpp  SSSP_gunrock.hpp  bfs.hpp  format_converter.hpp  graph_db_analytics.cpp  graph_db_analytics.cu  gunrock.h  gunrock_bfs.cpp  gunrock_bfs.hpp  gunrock_pr.cpp  gunrock_pr.hpp  gunrock_sssp.cpp  gunrock_sssp.hpp  shortest_path.cpp  shortest_path.hpp
src/bp_file/: bufferpool.cpp  bufferpool.hpp  lru_list.hpp  paged_file.cpp  paged_file.hpp
src/btree/: btree.hpp  fptree.hpp  imbtree.hpp  index_map.cpp  index_map.hpp  pbtree.hpp  pfbtree.hpp
src/cmds/: csv_loader.cpp  dpu.cpp  dpu_scan.cpp  gtpc_driver.cpp  mram_scan.c  pcli.cpp  pycli.py  qlc.cpp  run_queries.py  wal_dump.cpp
src/dict/: code_table.cpp  code_table.hpp  dict.cpp  dict.hpp  dict_bimap.cpp  dict_bimap.hpp  dict_kv.cpp  dict_kv.hpp  h2table.cpp  h2table.hpp  hdict.cpp  hdict.hpp  htable.cpp  htable.hpp  paged_string_pool.cpp  paged_string_pool.hpp  string_pool.cpp  string_pool.hpp
src/gtpc/: README.md  gtpc.cpp  gtpc.hpp  gtpc_bench.cpp  gtpc_generator.cpp  gtpc_loader.cpp  gtpc_olap.cpp  gtpc_oltp.cpp  gtpc_queries.cpp  gtpc_transactions.cpp  gtpcc_loader.cpp  run_gtpc.cpp  run_gtpc_loader.cpp  run_gtpcc_loader.cpp
src/ldbc/: README.md  ldbc.cpp  ldbc.hpp  ldbc_bi.cpp  ldbc_bi_reads.cpp  ldbc_deletes.cpp  ldbc_graphalytics.cpp  ldbc_is.cpp  ldbc_is_reads.cpp  ldbc_jit_bi.cpp  ldbc_jit_bi.hpp  ldbc_jit_reads.cpp  (+14 more)
test/: CMakeLists.txt  abort_insert.cpp  actors.csv  algorithm_test.cpp  ast_test.cpp  btree_test.cpp  buffered_vec_test.cpp  bufferpool_test.cpp  chunked_vec_test.cpp  csr_delta_test.cpp  dict_test.cpp  expr_test.cpp  file_vec_test.cpp  format_conversion_test.cpp  format_converter_test.cpp  grammar_test.cpp  graph_pool_test.cpp  graphalytics_test.cpp  graphanalytics_gunrock_test_DEFAULT-OFF.cpp  graphdb_test.cpp  gunrock_test.cpp  import_test.cpp  index_test.cpp  jit_engine_test.cpp  jit_test.cpp  ldbc_test.cpp  mem_chunked_vec_test.cpp  movies.csv  node_test.cpp  nvm_chunked_vec_test.cpp  paged_file_test.cpp  paged_string_pool_test.cpp  path_test.cpp  pmlog_test.cpp  property_test.cpp  qcomp_test.cpp  qcompiler_test.cpp  qinterp_test.cpp  qlang_test.cpp  qresult_test.cpp  (+14 more)
test/data_for_issue_24/: organisation_0_0.csv  place_0_0.csv  tag_0_0.csv
test/temporal_test/: CMakeLists.txt  readme.md
test/temporal_test/benchmark_data_TMgbench/: figure_c_vertex_types.csv  figure_d_time_slice.csv  poseidon_final_results_T_mgBench.csv  poseidon_write_latency_results.csv
test/temporal_test/benchmark_data_T_LDBC_sf1/: poseidon_query_latencies.csv  poseidon_storage_and_write.csv
test/temporal_test/benchmark_data_T_LDBC_sf3/: poseidon_query_latencies.csv  poseidon_storage_and_write.csv
test/temporal_test/include/: defs.hpp
test/temporal_test/poseidon_src/bp_file/: lru_list.cpp  paged_file.hpp
test/temporal_test/poseidon_src/btree/: btree.hpp  imbtree.hpp  pfbtree.hpp  temporal_index.cpp  temporal_index.hpp
test/temporal_test/poseidon_src/query/antlr4_generated/: poseidon.interp  poseidon.tokens  poseidonLexer.cpp  poseidonLexer.h  poseidonLexer.interp  poseidonVisitor.h
test/temporal_test/poseidon_src/query/compile/: compile_code_visitor.hpp  ir_generator.cpp  ir_generator.hpp  jit_funcs.cpp
test/temporal_test/poseidon_src/query/expr/: binary_expression.hpp  expression.cpp  expression.hpp
test/temporal_test/poseidon_src/query/interp/: expr_interpreter.cpp  qinterp.hpp
test/temporal_test/poseidon_src/query/parser/: poseidon.g4  query_planner.cpp  query_proc.cpp  query_proc.hpp
test/temporal_test/poseidon_src/query/plan_op/: qop_aggregates.cpp  qop_aggregates.hpp  qop_algorithm.hpp  qop_analytics.cpp  qop_builtins.cpp  qop_builtins.hpp  qop_joins.hpp  qop_projection.cpp  qop_projection.hpp  qop_relationships.cpp  qop_scans.cpp  qop_scans.hpp  qop_set.cpp  qop_set.hpp  qop_visitor.hpp  query_builder.cpp
test/temporal_test/poseidon_src/query/plan_visitors/: prepare_expr_visitor.cpp
test/temporal_test/poseidon_src/query/temporal_query/: qop_as_of_scan.cpp  qop_as_of_scan.hpp  qop_temporal_expand.cpp  qop_temporal_expand.hpp  qop_temporal_filter.cpp  qop_temporal_filter.hpp  qop_temporal_hash_join.cpp  qop_temporal_hash_join.hpp  qop_temporal_left_join.cpp  qop_temporal_left_join.hpp  qop_temporal_optional_expand.cpp  qop_temporal_optional_expand.hpp  qop_temporal_project.cpp  qop_temporal_project.hpp  qop_temporal_topk.cpp  qop_temporal_topk.hpp  qop_temporal_var_expand.cpp  qop_temporal_var_expand.hpp  qop_time_slice_expand.cpp  qop_time_slice_expand.hpp  qop_timeline_scan.cpp  qop_timeline_scan.hpp
test/temporal_test/poseidon_src/query/utils/: profiling.cpp  qresult.cpp  qresult.hpp  query_printer.cpp
test/temporal_test/poseidon_src/storage/: graph_db.cpp  graph_db.hpp  graph_db_import.cpp  graph_snapshot.hpp  history_manager.cpp  history_manager.hpp  history_storage.hpp  history_types.hpp  materialized_view.cpp  materialized_view.hpp  nodes.cpp  nodes.hpp  properties.cpp  properties.hpp  relationships.cpp  relationships.hpp
test/temporal_test/poseidon_src/tx/: transaction.cpp  txn_data.hpp
test/temporal_test/poseidon_src/vec/: buffered_vec.hpp
test/temporal_test/src/: T-LDBC_sf1.cpp  T-LDBC_sf3.cpp  T-Mgbench_incremental.cpp  loader.hpp  loader_ldbc.hpp  main.cpp  temporalize_ldbc.py  testfix.py  testmain.cpp
(+427 files in other folders)
